--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Simple C++
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Making C++ simpler, blog post by post.
+  Making C++ simpler, post by post. A blog about computer programming.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://simplecxx.github.io" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
