--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Simple C++
-email: your-email@example.com
+#email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Making C++ simpler, post by post. A blog about computer programming.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://simplecxx.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  dimztimz
+author: Dimitrij Mijoski
 
 # Build settings
 markdown: kramdown
